--- a/map/static/map/css/style.css
+++ b/map/static/map/css/style.css
@@ -1,7 +1,31 @@
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+main {
+    /*position: relative;*/
+    height: 100%;
+    }
+
 #map {
-  width: 100%;
-  height: 900px;
-  border: solid 2px #212529;
-  border-radius: 5px;
-  box-shadow: 8px 8px 15px #212529;
+    /* position: absolute; */
+    width: 100%;
+    height: 100%;
+    /* z-index: 1; */
+}
+
+test {
+    /* position: absolute;*/
+    /* z-index: 2; */
+}
+
+head {
+    font-family: 'Inter';font-size: 22px;
+}
+
+header {
+    background: #1A2D20;
 }
