--- a/templates/base.html
+++ b/templates/base.html
@@ -25,8 +25,12 @@
                 <span class="fs-4 text-white">BeyondBarriers.pp.ua</span>
             </a>
             <div class="col-md-5">
-                <button type="button" class="btn btn-primary">Primary</button>
-                <button type="button" class="btn btn-secondary">Secondary</button>
+                <button type="button" class="btn btn-default" style="padding: 0;">
+                    <img width="40px" height="40px" src="{% static 'map/img/eye.ico' %}" alt="eye">
+                </button>
+                <button type="button" class="btn btn-default" style="padding: 0;">
+                    <img width="40px" height="40px" src="{% static 'map/img/volume.ico' %}" alt="eye">
+                </button>
             </div>
             <ul class="nav nav-pills lg-4 md-3">
                 <li class="nav-item"><a href="{% url 'main' %}" class="nav-link active" aria-current="page">Main</a></li>
