--- a/map/templates/map/about.html
+++ b/map/templates/map/about.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
+
 {% block content %}
-<main>
-    <p>about</p>
-</main>
+<div>
+    <p>TEXT ABOUT US</p>
+</div>
 {% endblock %}
