--- a/map/static/map/css/style.css
+++ b/map/static/map/css/style.css
@@ -1,31 +1,24 @@
 html, body {
     height: 100%;
-    margin: 0;
+    width: 100%;
+    margin: 0 auto;
     padding: 0;
-    overflow: hidden;
 }
-
-main {
-    /*position: relative;*/
-    height: 100%;
-    }
 
 #map {
-    /* position: absolute; */
     width: 100%;
     height: 100%;
-    /* z-index: 1; */
-}
-
-test {
-    /* position: absolute;*/
-    /* z-index: 2; */
 }
 
 head {
-    font-family: 'Inter';font-size: 22px;
+    font-family: 'Inter', sans-serif;
+    font-size: 22px;
 }
 
 header {
     background: #1A2D20;
+}
+
+.nav-btn-mrg-r {
+    margin-right: 10px;
 }
