--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% url 'main' as main_url %}
+{% url 'about' as about_url %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -33,8 +35,16 @@
                 </button>
             </div>
             <ul class="nav nav-pills lg-4 md-3">
-                <li class="nav-item"><a href="{% url 'main' %}" class="nav-link active" aria-current="page">Main</a></li>
-                <li class="nav-item"><a href="{% url 'about' %}" class="nav-link">About</a></li>
+                <li class="nav-item nav-btn-mrg-r">
+                    <a href="{{ main_url }}">
+                        <button type="button" class="btn btn-outline-light {% if request.path == main_url %}active{% endif %}">Main</button>
+                    </a>
+                </li>
+                <li class="nav-item nav-btn-mrg-r">
+                    <a href="{{ about_url }}">
+                        <button type="button" class="btn btn-outline-light {% if request.path == about_url %}active{% endif %}">About</button>
+                    </a>
+                </li>
             </ul>
         </header>
         {% block content %}
