--- a/map/templates/map/about.html
+++ b/map/templates/map/about.html
@@ -1,7 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div>
-        <p>TEXT ABOUT US</p>
+    <div id="about">
+        <h2>Мапа безбар’єрності Києва для людей на колісних кріслах</h2>
+        <br>
+        <h3>Проект команди team-07 на хакатоні Luxoft TechGround Hackathon #2.</h3>
+        <br>
+        <h4>Учасники команди Дмитро Доля, Віра Абакумова, Семенов Микола, Валерій Бокоч, Анна Паламарчук.</h4>
     </div>
 {% endblock %}
