--- a/templates/base.html
+++ b/templates/base.html
@@ -12,11 +12,12 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-         integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-         crossorigin=""/>
+              integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+              crossorigin=""/>
         <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-         crossorigin=""></script>
+                integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+                crossorigin="">
+        </script>
         <link type="text/css" href="{% static 'map/css/style.css' %}" rel="stylesheet" />
         <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
     </head>
@@ -32,6 +33,9 @@
                 </button>
                 <button type="button" class="btn btn-default" style="padding: 0;">
                     <img width="40px" height="40px" src="{% static 'map/img/volume.ico' %}" alt="eye">
+                </button>
+                <button type="button" class="btn btn-success" id="clear_route" style="display: none;">
+                    Clear
                 </button>
             </div>
             <ul class="nav nav-pills lg-4 md-3">
