--- a/map/templates/map/about.html
+++ b/map/templates/map/about.html
@@ -2,10 +2,20 @@
 
 {% block content %}
     <div id="about">
+        <br>
         <h2>Мапа безбар’єрності Києва для людей на колісних кріслах</h2>
         <br>
         <h3>Проект команди team-07 на хакатоні Luxoft TechGround Hackathon #2.</h3>
         <br>
-        <h4>Учасники команди Дмитро Доля, Віра Абакумова, Семенов Микола, Валерій Бокоч, Анна Паламарчук.</h4>
+        <h4>Учасники команди:</h4>
+        <div style="margin-left: 42%;">
+            <ul style="text-align: left;">
+                <li> Дмитро Доля - backend/frontend</li>
+                <li> Семенов Микола - backend/frontend</li>
+                <li> Валерій Бокоч - backend/frontend</li>
+                <li> Віра Абакумова - design</li>
+                <li> Анна Паламарчук - QA</li>
+            </ul>
+        </div>
     </div>
 {% endblock %}
