--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
         <header class="d-flex flex-wrap justify-content-center py-3 ">
             <a href="/" class="d-flex align-items-center mb-3 lg-4 md-4 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
                 <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-                <span class="fs-4 text-white">BeyondBarriers.pp.ua</span>
+                <span class="fs-4 text-white">Beyond Barriers</span>
             </a>
             <div class="col-md-5">
                 <button type="button" class="btn btn-default" style="padding: 0;">
