small fixes, admin sector in navigation panel

--- a/map/templates/map/index.html
+++ b/map/templates/map/index.html
@@ -1,13 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="text-block">
-        <h1>About Us</h1>
-        We are building a first of a kind network of doctors who offer Direct Primary Care and Anti-Aging (Cosmetic
-        Dermatology) medical memberships for patients who want optimum healthcare driven by the latest in technology
-        and -- we offer a concierge service (management and patient referral service) for doctors that specializes
-        in converting "insurance" practices to the "membership" model.
-    </div>
+    <div class="text-block"></div>
     <div id="map-layer"></div>
     <script>
         let start = null;
