--- a/templates/base.html
+++ b/templates/base.html
@@ -49,6 +49,11 @@
                         <button type="button" class="btn btn-outline-light {% if request.path == about_url %}active{% endif %}">About</button>
                     </a>
                 </li>
+                <li class="nav-item nav-btn-mrg-r">
+                    <a href="/admin">
+                        <button type="button" class="btn btn-outline-light">Admin</button>
+                    </a>
+                </li>
             </ul>
         </header>
         {% block content %}
